# ctrl_node

./: CMakeLists.txt  nodelet_plugin.xml  package.xml
config/: ctrl_param.yaml
ctrl_node/sh_utils/: realflight_landing.sh  record.sh  set_offboard.sh  sim_traj_follow.sh  takeoff.sh  virtual_car_pub.sh
ctrl_node/src/ctrl_node/include/: fsm_nodelet.hpp  input.hpp
ctrl_node/src/ctrl_node/src/: input.cpp
ctrl_node/src/quadrotor_msgs/msg/: Px4ctrlDebug.msg
include/: controller.hpp  fsm_nodelet.hpp  param.hpp
launch/: run_ctrl.launch
src/: controller.cpp  ctrl_fsm.cc  ctrl_nodelet.cpp  param.cpp
